@@ -10,17 +10,29 @@ plugins {
     id 'com.github.teruteru128.study.java-application-conventions'
     id 'org.javamodularity.moduleplugin' version '1.8.15' apply true
     id 'org.openjfx.javafxplugin' version '0.1.0'
+    // id 'org.bertx.jlink' version '3.1.1'
 }
+
+version = '1.3.3-SNAPSHOT'
 
 javafx {
     version = "22.0.1"
     modules = [ 'javafx.controls' ]
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(24)
+    }
+}
+
 application {
     mainModule = 'com.github.teruteru.study'
     mainClass = 'com.github.teruteru128.study.Main'
-    applicationDefaultJvmArgs = ['-Xms32G', '-Xmx32G']
+    applicationDefaultJvmArgs = [
+            '-Xmx96G',
+            '--enable-native-access=com.github.teruteru.study,com.github.teruteru.foreign.gmp,com.github.teruteru.foreign.opencl,com.github.teruteru.foreign.mpfr,org.xerial.sqlitejdbc'
+    ]
 }
 
 run {
@@ -30,53 +42,27 @@ run {
 dependencies {
     implementation project(':bitmessage')
     implementation project(':encode')
+    implementation project(':foreign')
+    implementation project(':gmp')
+    implementation project(':mpfr')
+    implementation project(':opencl')
     implementation project(':resources')
-    implementation project(':sample')
     implementation project(':time')
 
     // https://mvnrepository.com/artifact/org.apache.commons/commons-rng-simple
-    implementation 'org.apache.commons:commons-rng-simple:1.5'
+    implementation 'org.apache.commons:commons-rng-simple:1.6'
+
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-statistics-descriptive
+    implementation 'org.apache.commons:commons-statistics-descriptive:1.1'
 
     // https://mvnrepository.com/artifact/org.apache.commons/commons-statistics-distribution
     implementation 'org.apache.commons:commons-statistics-distribution:1.0'
 
-    // https://mvnrepository.com/artifact/commons-codec/commons-codec
-    //implementation 'commons-codec:commons-codec:1.16.1'
-
     // https://mvnrepository.com/artifact/commons-io/commons-io
-    implementation 'commons-io:commons-io:2.16.1'
-
-    // This dependency is used by the application.
-    //implementation 'com.google.guava:guava:33.1.0-jre'
-
-    // https://mvnrepository.com/artifact/org.twitter4j/twitter4j-core
-    //implementation 'org.twitter4j:twitter4j-core:4.1.2'
+    implementation 'commons-io:commons-io:2.20.0'
 
     // https://mvnrepository.com/artifact/org.bouncycastle/bcmail-jdk18on
     implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
-
-    // https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime
-    //implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
-
-    // jaxb-runtime -> jaxb-core -> jakarta.xml.bind-api
-    // https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api
-    //implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
-
-    // https://mvnrepository.com/artifact/org.json/json
-    //implementation 'org.json:json:20240303'
-
-    // https://mvnrepository.com/artifact/com.google.code.gson/gson
-    //implementation 'com.google.code.gson:gson:2.10.1'
-
-    // https://mvnrepository.com/artifact/jakarta.json/jakarta.json-api
-    //implementation 'jakarta.json:jakarta.json-api:2.1.1'
-
-    // https://mvnrepository.com/artifact/org.glassfish/jakarta.json
-    //implementation 'org.glassfish:jakarta.json:2.0.1'
-
-    implementation 'org.spigotmc:spigot-api:1.20.6-R0.1-SNAPSHOT'
-
-    // implementation 'io.papermc.paper:paper-api:1.18.2-R0.1-SNAPSHOT'
 
     // https://mvnrepository.com/artifact/com.twitter.twittertext/twitter-text
     implementation 'com.twitter.twittertext:twitter-text:3.1.0'
@@ -92,7 +78,7 @@ dependencies {
 
     // https://github.com/greymd/CVE-2021-44228
     // https://mvnrepository.com/artifact/com.unboundid/unboundid-ldapsdk
-    implementation 'com.unboundid:unboundid-ldapsdk:7.0.0'
+    implementation 'com.unboundid:unboundid-ldapsdk:7.0.3'
 
     // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
     implementation 'org.xerial:sqlite-jdbc:3.45.3.0'
@@ -100,10 +86,29 @@ dependencies {
     // https://mvnrepository.com/artifact/org.postgresql/postgresql
     implementation 'org.postgresql:postgresql:42.7.3'
 
-    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
+    // https://mvnrepository.com/artifact/tools.jackson.core/jackson-databind
+    implementation 'tools.jackson.core:jackson-databind:3.0.1'
 
     // https://mvnrepository.com/artifact/org.openapitools/jackson-databind-nullable
     implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
 
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.18.2'
+
+    // https://picocli.info/
+    // https://mvnrepository.com/artifact/info.picocli/picocli
+    implementation 'info.picocli:picocli:4.7.6'
+
+    // https://mvnrepository.com/artifact/picocli-codegen/picocli
+    annotationProcessor 'info.picocli:picocli-codegen:4.7.6'
+
+    // https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core
+    implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.10'
+
+    // https://mvnrepository.com/artifact/org.jetbrains/annotations
+    implementation 'org.jetbrains:annotations:26.0.2-1'
+}
+
+compileJava {
+    options.compilerArgs += ["-Aproject=${project.group}/${project.name}", "-implicit:class"]
 }
